--- a/themes/kevingimbel/layouts/partials/meta.html
+++ b/themes/kevingimbel/layouts/partials/meta.html
@@ -2,9 +2,7 @@
 <base href="{{ .Site.BaseURL }}">
 <title>{{ .Site.Title }}</title>
 {{ .Hugo.Generator }}
-<link rel="canonical" href="{{ .Permalink }}">
-<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-<link rel="stylesheet" href="{{ .Permalink }}/css/style.css" />
+<link rel="stylesheet" href="/css/style.css" />
 <meta name="keywords" content="Front-End, Developer, CSS, JavaScript, Germany, Frankfurt" />
 <meta name="description" content="Front-End Developer from Frankfurt, Germany. I write about CSS, Sass, HTML and JavaScript. Sometimes I like to take photos." />
 <meta name="viewport" content="width=device-width" />
