Update Projects; Fix CSS

--- a/themes/kevingimbel/layouts/partials/header.html
+++ b/themes/kevingimbel/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en-US" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
+<html class="no-js" lang="en-US">
 <head>{{ partial "meta.html" }}</head>
 <body lang="en">
 
