--- a/themes/kevingimbel/layouts/post/single.html
+++ b/themes/kevingimbel/layouts/post/single.html
@@ -14,7 +14,8 @@
 </section>
 
 <footer class="article__footer wrap">
-  Found an issue? <a href="http://github.com/kevingimbel/kevingimbel.com/blob/master/{{.File.Path}}">Edit this post on GitHub</a> or <a href="https://twitter.com/_kevinatari">let me know on Twitter</a>.
+  Found an issue? <a
+    href="http://github.com/kevingimbel/kevingimbel.com/blob/master/content/{{.File.Path}}">Edit this post on GitHub</a> or <a href="https://twitter.com/_kevinatari">let me know on Twitter</a>.
 </footer>
 
 {{ range $script := .Params.scripts }}
