--- a/themes/kevingimbel/src/sass/style.scss
+++ b/themes/kevingimbel/src/sass/style.scss
@@ -12,5 +12,6 @@
 
 @import "modules/navigation",
         "modules/list",
+        "modules/highlight",
         "modules/project",
         "modules/article";
