[a11y] Fix contrast; Add aria-* Attributes

--- a/themes/kevingimbel/layouts/partials/header.html
+++ b/themes/kevingimbel/layouts/partials/header.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en-US">
-<head>{{ partial "meta.html" }}</head>
+<head>
+  <title>{{ .Site.Title }}</title>
+  {{ partial "meta.html" }}
+</head>
 <body lang="en">
 
 <header class="site__header">
