--- a/themes/kevingimbel/src/sass/core/_header.scss
+++ b/themes/kevingimbel/src/sass/core/_header.scss
@@ -1,7 +1,11 @@
 .site__header {
-  background: #263238;
+  background: #0c1012;
   color: #fff;
   padding: 2rem;
+
+    a {
+      color: $color-accent;
+    }
 }
 
 .site__header h1 {
