--- a/themes/kevingimbel/layouts/_default/article-home.html
+++ b/themes/kevingimbel/layouts/_default/article-home.html
@@ -1,7 +1,9 @@
-<h3 class="h2"><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
-<div class="article-home__body">
-  <p>{{ .Summary | plainify | safeHTML }}
-  {{ if .Truncated }}
-  ...<a href="{{ .Permalink }}">Read more</a>
-  {{ end }}</p>
+<div class="article__home" aria-labeldby="heading-{{ .UniqueID}}" aria-describedby="description-{{ .UniqueID }}">
+  <h3 class="h2" id="heading-{{ .UniqueID }}"><a href="{{ .Permalink }}" title="Read more about {{ .Title }}" tabindex="1">{{ .Title }}</a></h3>
+  <div class="article-home__body" id="description-{{ .UniqueID }}">
+    <p>{{ .Summary | plainify | safeHTML }}
+    {{ if .Truncated }}
+    ...<a href="{{ .Permalink }}" title="Continue reading {{ .Title }}">Continue reading</a>
+    {{ end }}</p>
+  </div>
 </div>
