--- a/themes/kevingimbel/layouts/_default/single.html
+++ b/themes/kevingimbel/layouts/_default/single.html
@@ -1,11 +1,11 @@
 {{ partial "header.html" }}
 
 
-<section class="page wrap">
+<section class="page wrap" aria-labeldyby="title-{{ .UniqueID }}" aria-describedby="desc-{{ .UniqueID }}">
   <header class="page-header">
-    <h1>{{ .Title }}</h1>
+    <h2 id="title-{{ .UniqueID }}">{{ .Title }}</h2>
   </header>
-  <div class="page-body">
+  <div class="page-body" id="desc-{{ .UiqueId }}">
     {{ .Content }}
   </div>
 </section>
