--- a/themes/kevingimbel/src/sass/core/_vars.scss
+++ b/themes/kevingimbel/src/sass/core/_vars.scss
@@ -1,4 +1,5 @@
-$color-accent: #2196F3;
+$color-accent: #3ea3f5; //#2196F3;
 $color-accent--secondary: #E91E63;
+$color-accent--dark: #085390;
 
 $color--article: #3F51B5;
