--- a/themes/kevingimbel/layouts/taxonomy/tag.terms.html
+++ b/themes/kevingimbel/layouts/taxonomy/tag.terms.html
@@ -4,9 +4,7 @@
   <header class="page-header">
     <h2 id="title">{{ .Title }}</h2>
   </header>
-  <div class="page-body" id="desc">
-    {{ .Content }}
-  </div>
+  <code>Overview coming soon.</code>
 </section>
 
 {{ partial "footer.html" }}
