--- a/themes/kevingimbel/layouts/partials/header.html
+++ b/themes/kevingimbel/layouts/partials/header.html
@@ -5,13 +5,13 @@
   {{ partial "meta.html" }}
 </head>
 <body lang="en">
+<header class="scroller"></header>
 
 <header class="site__header">
   <div class="wrap">
     <h1>Kevin Gimbel</h1>
-    <h2>Developer &amp; video game enthusiast</h2>
+    <h2>Developer &amp; <span id="word_switch">video game enthusiast</span></h2>
     {{ partial "nav.html" }}
   </div>
 </header>
 <main role="main" class="content">
-<section class="page-inner">
