Add Imprint; Add Tags to post; CSS Adjustments

--- a/themes/kevingimbel/layouts/partials/footer.html
+++ b/themes/kevingimbel/layouts/partials/footer.html
@@ -3,6 +3,7 @@
 <footer class="site__footer">
   <div class="wrap">
     <p>Content &copy; 2013-2016 Kevin Gimbel. Build with <a href="https://gohugo.io">Hugo {{ .Hugo.Version }}</a>.</p>
+    <p><a href="/imprint/">Imprint</a> - Proudly <a href="https://uberspace.de">Hosted on asteroids</a>.</p>
     <ul class="list__flex">
       <li><a href="https://twitter.com/_kevinatari" title="Follow me on twitter">@_kevinatari</a></li>
       <li><a href="https://github.com/kevingimbel" title="View open source projects on GitHub">github.com/kevingimbel</a></li>
