--- a/themes/kevingimbel/layouts/404.html
+++ b/themes/kevingimbel/layouts/404.html
@@ -1,1 +1,18 @@
-<pre style="font-size:10vh;"><code>404 - Not found.</code></pre>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>404 - Page not found</title>
+</head>
+<body>
+  <pre style="font-size:10vh;"><code>404 - Not found.</code></pre>
+  <p>The requested page <span id="pageurl"></span> could not be found.</p>
+  <script type="text/javascript">
+  (function(window, document, undefined) {
+    var path = window.location.pathname;
+    var out = document.getElementById('pageurl');
+    out.innerText = path;
+  }(window, document));
+  </script>
+</body>
+</html>
