--- a/themes/kevingimbel/layouts/404.html
+++ b/themes/kevingimbel/layouts/404.html
@@ -5,8 +5,8 @@
   <title>404 - Page not found</title>
 </head>
 <body>
-  <pre style="font-size:10vh;"><code>404 - Not found.</code></pre>
-  <p>The requested page <span id="pageurl"></span> could not be found.</p>
+  <h2>404 - Not found.</h2>
+  <p>The requested page <span id="pageurl"></span> could not be found. Return <a href="/" title="Home">Home</a>.</p>
   <script type="text/javascript">
   (function(window, document, undefined) {
     var path = window.location.pathname;
