--- a/themes/kevingimbel/layouts/partials/footer.html
+++ b/themes/kevingimbel/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 </main>
 <footer class="site__footer">
   <div class="wrap">
-    <p>Content &copy; 2013-2016 Kevin Gimbel. Build with <a href="https://gohugo.io">Hugo {{ .Hugo.Version }}</a>.</p>
+    <p>Content &copy; 2013-2016 Kevin Gimbel. Build with <a href="https://gohugo.io">Hugo</a>.</p>
     <p><a href="/imprint/">Imprint</a> - Proudly <a href="https://uberspace.de">Hosted on asteroids</a>.</p>
     <ul class="list__flex">
       <li><a href="https://twitter.com/_kevinatari" title="Follow me on twitter">@_kevinatari</a></li>
@@ -11,6 +11,5 @@
     </ul>
   </div>
 </footer>
-<script src="/js/main.js"></script>
 </body>
 </html>
