--- a/themes/kevingimbel/src/sass/modules/_article.scss
+++ b/themes/kevingimbel/src/sass/modules/_article.scss
@@ -19,7 +19,7 @@
 }
 
 .article__footer {
-  padding: 1rem 2rem;
+  padding: 1rem 0;
 }
 
 .article-home {
@@ -30,19 +30,26 @@
   word-break: break-word;
 }
 
-
 .article-list__divider {
   border-top: .5rem solid $color--article;
   margin-top: 4rem;
 }
+
 .article__card-list {
   display: flex;
   flex-wrap: wrap;
 }
+
 .article__card {
   margin: 1rem;
   background: #f1f1f1;
   border: 1px solid #aaa;
   width: calc(50% - 2rem);
   padding: 1rem;
+}
+
+@media all and (max-width: 60rem) {
+  .article__card {
+    width: 100%;
+  }
 }
