--- a/themes/kevingimbel/layouts/_default/list.html
+++ b/themes/kevingimbel/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" }}
 
 <section class="page wrap" aria-labeldyby="title" aria-describedby="title">
-  <h3 id="title">All posts tagged under #{{ .Title }}</h3>
+  <h3 id="title">All posts <a href="/tags/">tagged</a> under #{{ .Title }}</h3>
 
   <div class="article__card-list">
     {{ range .Data.Pages }}
