--- a/themes/kevingimbel/layouts/post/single.html
+++ b/themes/kevingimbel/layouts/post/single.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" }}
 
-<header class="article__header">
+<header class="article__header" id="header">
   <div class="inner">
     <h1 class="title">{{ .Title }}</h1>
     <p>Estamate reading time {{ .ReadingTime }} minutes ({{ .WordCount }} words), categorized under <code>{{ .Params.categories }}</code></p>
