--- a/themes/kevingimbel/src/sass/modules/_list.scss
+++ b/themes/kevingimbel/src/sass/modules/_list.scss
@@ -29,3 +29,32 @@
     justify-content: space-between;
   }
 }
+
+.tag-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+}
+
+.tag-list li {
+  display: block;
+  min-width: 150px;
+  background: #eee;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.tag-list__link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: .5rem;
+}
+
+@media all and (max-width: 60rem) {
+  .tag-list {
+    justify-content: center;
+  }
+}
