--- a/themes/kevingimbel/layouts/post/single.html
+++ b/themes/kevingimbel/layouts/post/single.html
@@ -1,26 +1,24 @@
-{{ partial "header.html" }}
+{{ define "main" }}
+  <header class="article__header" id="header">
+    <div class="inner">
+      <h1 class="title">{{ .Title }}</h1>
+      <p>Estamate reading time {{ .ReadingTime }} minutes ({{ .WordCount }} words), categorized under <code>{{ .Params.categories }}</code></p>
+      <p>Tagged: {{ range .Params.tags }} <a href="/tags/{{ . }}">#{{ . }}</a> {{ end }}</p>
+    </div>
+  </header>
 
-<header class="article__header" id="header">
-  <div class="inner">
-    <h1 class="title">{{ .Title }}</h1>
-    <p>Estamate reading time {{ .ReadingTime }} minutes ({{ .WordCount }} words), categorized under <code>{{ .Params.categories }}</code></p>
-    <p>Tagged: {{ range .Params.tags }} <a href="/tags/{{ . }}">#{{ . }}</a> {{ end }}</p>
-  </div>
-</header>
+  <section class="article wrap">
+    <div class="article__content inner">
+      {{ .Content }}
+    </div>
+  </section>
 
-<section class="article wrap">
-  <div class="article__content inner">
-    {{ .Content }}
-  </div>
-</section>
+  <footer class="article__footer wrap">
+    Found an issue? <a
+      href="http://github.com/kevingimbel/kevingimbel.com/blob/master/content/{{.File.Path}}">Edit this post on GitHub</a> or <a href="https://twitter.com/_kevinatari">let me know on Twitter</a>.
+  </footer>
 
-<footer class="article__footer wrap">
-  Found an issue? <a
-    href="http://github.com/kevingimbel/kevingimbel.com/blob/master/content/{{.File.Path}}">Edit this post on GitHub</a> or <a href="https://twitter.com/_kevinatari">let me know on Twitter</a>.
-</footer>
-
-{{ range $script := .Params.scripts }}
-  <script src="{{ $script }}"></script>
+  {{ range $script := .Params.scripts }}
+    <script src="{{ $script }}"></script>
+  {{ end }}
 {{ end }}
-
-{{ partial "footer.html" }}
