--- a/themes/kevingimbel/layouts/section/projects.html
+++ b/themes/kevingimbel/layouts/section/projects.html
@@ -1,26 +1,24 @@
-{{ partial "header.html" }}
-
-<section class="page wrap" aria-labeldyby="title" aria-describedby="desc">
-  <h2 id="title">{{ .Title }}</h2>
-  <p id="desc">Below you can see some projects of mine. You can see more on <a href="https://github.com/kevingimbel">GitHub</a> or <a href="http://codepen.io/kevingimbel/">CodePen</a>. Projects are grouped by language.</p>
-  <div class="project__wrap">
-    {{ range .Data.Pages.GroupByParam "language" }}
-    <div class="project__item" aria-labeldby="{{ lower .Key }}" aria-describedby="desc-{{ lower .Key }}">
-      <header class="project__header {{lower .Key}}">
-        <h3 id="{{lower .Key}}" class="project__title">{{ .Key }}</h3>
-        <p class="is-hidden" id="desc-{{ lower .Key }}">List of projects of mine written in {{ .Key }}</p>
-      </header>
-      <ul class="project__list">
-        {{ range .Pages }}
-        <li>
-          <a href="{{ .Permalink }}" title="Learn more about {{ .Title }}">{{ .Title }}</a>
-          <a href="{{ .Params.project_url}}" title="View {{ .Title }} on GitHub" class="project__link-extern">View on GitHub</a>
-        </li>
-        {{ end }}
-      </ul>
+{{ define "main" }}
+  <section class="page wrap" aria-labeldyby="title" aria-describedby="desc">
+    <h2 id="title">{{ .Title }}</h2>
+    <p id="desc">Below you can see some projects of mine. You can see more on <a href="https://github.com/kevingimbel">GitHub</a> or <a href="http://codepen.io/kevingimbel/">CodePen</a>. Projects are grouped by language.</p>
+    <div class="project__wrap">
+      {{ range .Data.Pages.GroupByParam "language" }}
+      <div class="project__item" aria-labeldby="{{ lower .Key }}" aria-describedby="desc-{{ lower .Key }}">
+        <header class="project__header {{lower .Key}}">
+          <h3 id="{{lower .Key}}" class="project__title">{{ .Key }}</h3>
+          <p class="is-hidden" id="desc-{{ lower .Key }}">List of projects of mine written in {{ .Key }}</p>
+        </header>
+        <ul class="project__list">
+          {{ range .Pages }}
+          <li>
+            <a href="{{ .Permalink }}" title="Learn more about {{ .Title }}">{{ .Title }}</a>
+            <a href="{{ .Params.project_url}}" title="View {{ .Title }} on GitHub" class="project__link-extern">View on GitHub</a>
+          </li>
+          {{ end }}
+        </ul>
+      </div>
+      {{ end }}
     </div>
-    {{ end }}
-  </div>
-</section>
-
-{{ partial "footer.html" }}
+  </section>
+{{ end }}
