--- a/themes/kevingimbel/layouts/taxonomy/tag.terms.html
+++ b/themes/kevingimbel/layouts/taxonomy/tag.terms.html
@@ -1,5 +1,4 @@
-{{ partial "header.html" }}
-
+{{ define "main" }}
 <section class="page wrap" aria-labeldyby="title" aria-describedby="desc">
   <header class="page-header">
     <h2 id="title">{{ .Title }}</h2>
@@ -13,4 +12,4 @@
   </ul>
 </section>
 
-{{ partial "footer.html" }}
+{{ end }}
