--- a/themes/kevingimbel/src/sass/core/_base.scss
+++ b/themes/kevingimbel/src/sass/core/_base.scss
@@ -18,7 +18,8 @@ html, body {
 
 a {
   color: $color-accent--dark;
-
+  text-decoration: none;
+  border-bottom: .125rem solid currentColor;
     &:hover {
       color: $color-accent--secondary;
     }
