--- a/themes/kevingimbel/src/sass/modules/_article.scss
+++ b/themes/kevingimbel/src/sass/modules/_article.scss
@@ -6,12 +6,12 @@
 
 .article__header {
   background: $color--article;
-  color: #fff;
+  color: $color-accent--dark;
   margin-top: -2rem;
 }
 
 .article__header a {
-  color: #fff;
+  color: $color-accent--dark;
 }
 
 .article__content {
