--- a/themes/kevingimbel/src/sass/core/_vars.scss
+++ b/themes/kevingimbel/src/sass/core/_vars.scss
@@ -1,5 +1,5 @@
-$color-accent: #3ea3f5; //#2196F3;
-$color-accent--secondary: #E91E63;
-$color-accent--dark: #085390;
+$color-accent: blue; //#3ea3f5; //#2196F3;
+$color-accent--secondary: deeppink; // #E91E63;
+$color-accent--dark: #000; //#085390;
 
-$color--article: #3F51B5;
+$color--article: deeppink; //#3F51B5;
