Remove falsy template; Brighter colors

--- a/themes/kevingimbel/src/sass/core/_base.scss
+++ b/themes/kevingimbel/src/sass/core/_base.scss
@@ -117,6 +117,10 @@ figcaption {
   width: 100%;
   max-width: 80rem;
   margin: 0 auto;
+
+    @media all and (max-width: 80rem) {
+      max-width: 60rem;
+    }
 }
 
 .inner {
