--- a/themes/kevingimbel/src/sass/core/_footer.scss
+++ b/themes/kevingimbel/src/sass/core/_footer.scss
@@ -7,5 +7,13 @@
   .site__footer {
     padding: 1rem;
     text-align: center;
+    margin-top: 4rem;
+    background: #000;
+    color: #fff;
+    font-size: .75rem;
+
+      a {
+        color: $color-accent--secondary;
+      }
   }
 }
