Fixes to home articles

--- a/themes/kevingimbel/src/sass/modules/_article.scss
+++ b/themes/kevingimbel/src/sass/modules/_article.scss
@@ -106,6 +106,11 @@
     margin-bottom: 3rem;
   }
 
+  .featured__project,
+  .article-featured  {
+    padding: 2rem 0;
+  }
+
   .title {
     font-size: 1.5rem;
   }
