--- a/themes/kevingimbel/layouts/partials/footer.html
+++ b/themes/kevingimbel/layouts/partials/footer.html
@@ -1,15 +1,51 @@
-</section>
-</main>
 <footer class="site__footer">
   <div class="wrap">
-    <p>Content &copy; 2013-2016 Kevin Gimbel. Build with <a href="https://gohugo.io">Hugo</a>.</p>
-    <p><a href="/imprint/">Imprint</a> - Proudly <a href="https://uberspace.de">Hosted on asteroids</a>.</p>
+    <p>Follow me on various networks:</p>
     <ul class="list__flex">
-      <li><a href="https://twitter.com/_kevinatari" title="Follow me on twitter">@_kevinatari</a></li>
-      <li><a href="https://github.com/kevingimbel" title="View open source projects on GitHub">github.com/kevingimbel</a></li>
-      <li><a href="http://codepen.io/kevingimbel">codepen.io/kevingimbel</a></li>
-    </ul>
+      <li class="icon-flex__wrap">
+        <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-twitter"></use></svg>
+        <a href="https://twitter.com/_kevinatari" title="Follow me on twitter">
+          @_kevinatari
+        </a>
+      </li>
+      <li class="icon-flex__wrap">
+        <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-github"></use></svg>
+        <a href="https://github.com/kevingimbel" title="View open source projects on GitHub">/kevingimbel</a>
+      </li>
+      <li class="icon-flex__wrap">
+        <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-codepen"></use></svg>
+        <a href="http://codepen.io/kevingimbel" title="Code Demos on CodePen">/kevingimbel</a>
+    </li>
+    <li class="icon-flex__wrap">
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-snapchat"></use></svg>
+      <a href="https://www.snapchat.com/add/kevinatari" title="Stories and Cooking on Snapchat">kevinatari</a>
+    </li>
+    <li class="icon-flex__wrap">
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-reddit"></use></svg>
+      <a href="https://reddit.com/u/kevinatari" title="Fun and comments on Reddit">u/kevinatari</a>
+    </li>
+    <li class="icon-flex__wrap">
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-tumblr"></use></svg>
+      <a href="http://atarijunge.de" title="Random things on tumblr (may be NSFW)">atarijunge.de (nsfw)</a>
+    </li>
+    <li class="icon-flex__wrap">
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-instagram"></use></svg>
+      <a href="https://www.instagram.com/kevingimbel/" title="Random images on Instagram">/kevingimbel</a>
+    </li>
+    <li class="icon-flex__wrap">
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-playstation"></use></svg>
+      <a href="https://my.playstation.com/atarijunge" title="Gaming on PlayStation">/atarijunge</a>
+    </li>
+    <li class="icon-flex__wrap">
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-steam"></use></svg>
+      <a href="https://steamcommunity.com/id/kevingimbel" title="Gaming on Steam">/kevingimbel</a>
+    </li>
+  </ul>
+  <hr class="divider">
+  <p>Content &copy; 2013-2016 Kevin Gimbel - Build with <a href="https://gohugo.io">Hugo</a> - <a href="/imprint/">Imprint</a></p>
+  <p><span class="icon-flex__wrap">
+    <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-planet"></use></svg>
+    <a href="https://uberspace.de">Hosted on asteroids</a></p>
+  </span>
   </div>
 </footer>
-</body>
-</html>
