--- a/themes/kevingimbel/src/sass/core/_footer.scss
+++ b/themes/kevingimbel/src/sass/core/_footer.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.site__footer p {
+    margin-bottom: .5rem;
+}
+
 @media all and (max-width: 60rem) {
   .site__footer {
     margin-top: 0;
