--- a/themes/kevingimbel/src/sass/style.scss
+++ b/themes/kevingimbel/src/sass/style.scss
@@ -8,7 +8,8 @@
         "core/header",
         "core/footer";
 
-@import "objects/flex";
+@import "objects/flex",
+        "objects/icon";
 
 @import "modules/navigation",
         "modules/list",
