--- a/themes/kevingimbel/src/sass/modules/_highlight.scss
+++ b/themes/kevingimbel/src/sass/modules/_highlight.scss
@@ -2,12 +2,13 @@ pre, code {
   font-family: 'Source Code Pro', Courier New, monospace;
 }
 pre {
-  background: #333;
+  background: inherit;
   color: #d0d0d0;
   padding: .75rem;
   margin: .75rem 0;
   overflow: auto;
   border-radius: 3px;
+  padding: 1.25rem 2rem;
 }
 
 p > code {
@@ -17,4 +18,24 @@ p > code {
   margin: .25rem 0;
   color: #333;
   word-wrap: break-word;
+}
+
+
+.highlight {
+  position: relative;
+  border-left: 5px solid blue;
+
+  &:before {
+    content: '</>';
+    background-color: blue;
+    width: 2rem;
+    height: 2rem;
+    position: absolute;
+    top: -.75rem;
+    left: -1.15rem;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 1.95;
+    color: #fff;
+  }
 }
