--- a/themes/kevingimbel/layouts/_default/baseof.html
+++ b/themes/kevingimbel/layouts/_default/baseof.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <base href="{{ .Site.BaseURL }}">
   {{ .Hugo.Generator }}
-  <title>{{ block "title" . }}
-      {{ .Title }} | {{ .Site.Title }}
-  {{ end }}</title>
+  <title>{{ block "title" . }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
   <meta name="description" content="{{ .Site.Params.description }}">
   <meta name="author" content="{{ .Site.Params.author }}">
   <meta name="keywords" content="Front-End, Developer, CSS, Bash, Go, JavaScript, Germany, Frankfurt, Docker, Magento" />
   <meta name="viewport" content="width=device-width" />
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="64x64">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/highlight.css" />
