--- a/themes/kevingimbel/layouts/_default/baseof.html
+++ b/themes/kevingimbel/layouts/_default/baseof.html
@@ -9,11 +9,13 @@
   <meta name="author" content="{{ .Site.Params.author }}">
   <meta name="keywords" content="Front-End, Developer, CSS, Bash, Go, JavaScript, Germany, Frankfurt, Docker, Magento" />
   <meta name="viewport" content="width=device-width" />
+  <meta name="theme-color" content="#E91E63">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="icon" type="image/png" href="/favicon.png" sizes="64x64">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
+  {{ if .IsPage }}
   <link rel="stylesheet" href="/css/highlight.css" />
+  {{ end }}
 </head>
 <body lang="en">
 <header class="site__header">
@@ -24,7 +26,6 @@
   </div>
 </header>
 <main role="main" class="content">
-
   {{ block "main" . }}
     <!-- The part of the page that begins to differ between templates -->
   {{ end }}
