--- a/themes/kevingimbel/src/sass/core/_base.scss
+++ b/themes/kevingimbel/src/sass/core/_base.scss
@@ -11,7 +11,11 @@
 html, body {
   font-size: 1rem;
   line-height: 1.65;
-  font-family: 'Lato', sans-serif;
+  // System fonts
+  font-family: -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   color: #333;
   background: #fff;
 }
