--- a/themes/kevingimbel/src/sass/modules/_highlight.scss
+++ b/themes/kevingimbel/src/sass/modules/_highlight.scss
@@ -2,7 +2,7 @@ pre, code {
   font-family: 'Source Code Pro', Courier New, monospace;
 }
 pre {
-  background: inherit;
+  background: #202020;
   color: #d0d0d0;
   padding: .75rem;
   margin: .75rem 0;
